start repl with allowAttachSelf